<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_find_home">

    <fragment
        android:id="@+id/navigation_find_home"
        android:name="com.example.easysublet.view.FindHomeFragment"
        android:label="@string/find_home"
        tools:layout="@layout/fragment_find_home" />

    <fragment
        android:id="@+id/navigation_find_roommates"
        android:name="com.example.easysublet.view.FindRoommatesFragment"
        android:label="@string/find_roommate"
        tools:layout="@layout/fragment_find_roommates" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.easysublet.view.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>