<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/changePwTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/change_pw"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/oldPasswordEntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/changePwTitle"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/old_pw"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/newPasswordEntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/oldPasswordEntry"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/confirmPasswordEntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newPasswordEntry"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/confirm_pw"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/confirmBtn"
        android:layout_width="287dp"
        android:layout_height="38dp"
        android:layout_below="@+id/confirmPasswordEntry"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="30dp"
        android:text="@string/confirm" />
</RelativeLayout>