<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/house"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/hello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:gravity="center"
        android:text="@string/hello"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/emailEntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_below="@+id/hello"
        android:background="#70ffffff"
        android:drawableLeft="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="20dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:hint="Email"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        />

    <EditText
        android:id="@+id/passwordEntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_below="@+id/emailEntry"
        android:background="#70ffffff"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="20dp"
        android:ems="10"
        android:inputType="textPassword"
        android:padding="20dp"
        android:hint="Password"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
     />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordEntry"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:text="@string/sign_in" />

    <LinearLayout
        android:id="@+id/signUpLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginBtn"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/signUpTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_question"
            android:textColor="@color/white" />
        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/sign_up"
            android:textAllCaps="false"/>

    </LinearLayout>




</RelativeLayout>