<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddRoommatePostFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/topAppBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/edit_roommate_post"
                app:titleCentered="true"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"/>

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/tilTitleEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topAppBar"
            android:hint="@string/title"
            app:startIconDrawable="@drawable/ic_action_title"
            app:helperText="@string/required"
            app:helperTextTextColor="@color/red"
            app:endIconMode="clear_text"
            app:endIconDrawable="@drawable/ic_action_cancel">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/titleEntry"
                android:inputType="textLongMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/tilAddressEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilTitleEntry"
            android:hint="@string/preferred_address"
            app:startIconDrawable="@drawable/ic_action_home"
            app:helperText="@string/required"
            app:helperTextTextColor="@color/red"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_location">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addressEntry"
                android:inputType="textPostalAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/tilTimePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            app:startIconDrawable="@drawable/ic_action_calender"
            app:helperText="@string/required"
            app:helperTextTextColor="@color/red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilAddressEntry">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/timeEntry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/preferred_period"
                android:inputType="date"
                android:imeOptions="flagNoExtractUi"
                android:focusable="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/tilRentEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilTimePicker"
            android:hint="@string/preferred_rent"
            app:startIconDrawable="@drawable/ic_action_money"
            app:helperText="@string/required"
            app:helperTextTextColor="@color/red"
            app:endIconMode="clear_text"
            app:endIconDrawable="@drawable/ic_action_cancel">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rentEntry"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/tilContactEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilRentEntry"
            android:hint="@string/contact"
            app:startIconDrawable="@drawable/ic_action_contact"
            app:helperText="@string/required"
            app:helperTextTextColor="@color/red"
            app:endIconMode="clear_text"
            app:endIconDrawable="@drawable/ic_action_cancel">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/contactEntry"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/llRoomNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilContactEntry">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilBathroomEntry"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:hint="@string/preferred_bathroom"
                app:endIconDrawable="@drawable/ic_action_cancel"
                app:endIconMode="clear_text"
                app:helperText="@string/required"
                app:helperTextTextColor="@color/red"
                app:startIconDrawable="@drawable/ic_action_bathroom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/bathroomEntry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="2" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilBedroomEntry"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="@string/preferred_bedroom"
                app:endIconDrawable="@drawable/ic_action_cancel"
                app:endIconMode="clear_text"
                app:helperText="@string/required"
                app:helperTextTextColor="@color/red"
                app:startIconDrawable="@drawable/ic_action_bedroom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/bedroomEntry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="2" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/tilGenderEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/preference_of_gender"
            app:startIconDrawable="@drawable/ic_baseline_person_outline_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llRoomNumber">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/genderEntry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:id="@+id/llCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilGenderEntry">
            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/cbPet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/preferred_pet">
            </com.google.android.material.checkbox.MaterialCheckBox>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/cbFurnished"
                android:layout_width="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_height="wrap_content"
                android:text="@string/preferred_furnished">
            </com.google.android.material.checkbox.MaterialCheckBox>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/tilInfoEntry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llCheckBox"
            android:hint="@string/more_info"
            android:gravity="center_horizontal"
            app:endIconMode="clear_text"
            app:endIconDrawable="@drawable/ic_action_cancel">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/infoEntry"
                android:inputType="textMultiLine|textLongMessage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lines="5"/>

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/postPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/tilInfoEntry"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_baseline_add_photo_alternate_96"
            android:contentDescription="@string/add_photo_des"
            >
        </ImageView>

        <TextView
            android:id="@+id/addPhotoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_photo_des"
            app:layout_constraintTop_toBottomOf="@+id/postPhoto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_horizontal">
        </TextView>

        <Button
            android:id="@+id/updateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/addPhotoText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/update" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>